--- a/style.css
+++ b/style.css
@@ -98,11 +98,15 @@
     color: var(--color-primary);
  }
  .danger{
-    color:darkgreen;
+    color:rgb(255, 72, 0);
  }
 
  .success{
     color: var(--color-success);
+ }
+
+ .warning{
+   color: var(--color-warning);
  }
 
  .container{
@@ -133,6 +137,10 @@
  aside .toggle .logo svg{
     width: 2rem;
     height: 2rem;
+ }
+
+ .logo{
+   margin-top: 0.7rem;
  }
 
  aside .toggle .close{
@@ -338,4 +346,43 @@
    height: 5rem;
    margin-bottom: 0.4rem;
    border-radius: 50%;
+ }
+
+ main .recent-orders{
+   margin-top: 1.3rem;
+
+ }
+
+ main .recent-orders h2{
+   margin-bottom: 0.8rem;
+ }
+
+ main .recent-orders table{
+   background-color: var(--color-white);
+   width: 100%;
+   padding: var(--card-padding);
+   text-align: center;
+   box-shadow: var(--box-shadow);
+   border-radius: var(--card-border-radius);
+   transition: all 0.3s ease;
+ }
+
+ main .recent-orders table:hover{
+   box-shadow: none;
+ }
+
+ main table tbody td{
+   height: 2.8rem;
+   border-bottom: 1px solid var(--color-light);
+   color: var(--color-dark-variant);
+ }
+ main table tbody tr:last-child td{
+   border: none;
+ }
+
+ main .recent-orders a{
+   text-align: center;
+   display: block;
+   margin: 1rem auto;
+   color: var(--color-primary);
  }
